fix: word wrap added

--- a/src/containers/PrivacyPolicy/Cookies/Cookies.module.scss
+++ b/src/containers/PrivacyPolicy/Cookies/Cookies.module.scss
@@ -36,6 +36,10 @@
   max-width: 1200px;
   margin: 0 auto;
 
+  @media (max-width: 768px) {
+    max-width: 100%;
+  }
+
   & .card_title {
     color: $color--blue;
   }
@@ -46,6 +50,7 @@
   flex-direction: column;
   gap: 2rem;
   width: 100%;
+  word-wrap: break-word;
 
   & .table {
     display: flex;
